<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CupboardManager</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="item_name_hint_txt">Item Name...</string>
    <string name="item_checkbox_txt">Notify me when expired</string>
    <string name="item_expiry_date_hint_txt">Expiry Date</string>
    <string name="title_cupboard_item">" Cupboard Item"</string>
    <string name="title_shopping_item">" Shopping Item"</string>
    <string name="activity_item_title_edit">Edit</string>
    <string name="activity_item_title_create">Create</string>
    <string name="item_name_empty_error">Please enter an item name first...</string>
    <string name="menu_item_delete">Delete</string>
    <string name="item_quantity">Quantity</string>
    <string name="item_deleted">Item deleted!</string>
    <string name="activity_main_shopping">SHOPPING</string>
    <string name="activity_main_cupboard">CUPBOARD</string>
    <string name="shopping_row_item_name">Item name will go here</string>
    <string name="cupboard_row_item_name">Cupboard item </string>
    <string name="add_button">+</string>
    <string name="need_more">NEED\nMORE</string>
    <string name="quantity">x</string>
    <string name="button_cancel">Cancel</string>
    <string name="got_item">GOT\nITEM</string>
    <string name="menu_share">Share</string>
    <string name="title_activity_shopping_reminder">ShoppingReminderActivity</string>
    <string name="default_shopping_reminder_name">Go Shopping</string>
    <string name="reminder_name_hint">Event name</string>
    <string name="reminder_date_hint_text">Date</string>
    <string name="reminder_time_hint_text">Time</string>
    <string name="menu_add_reminder">Add Shopping Reminder</string>

</resources>
