<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mobile.cupboardmanager.ShoppingReminderActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/add_shopping_reminder_button">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/reminderName"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:hint="@string/reminder_name_hint"
                android:padding="5dp"
                android:layout_margin="15dp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/reminder_date_text"
                android:hint="@string/reminder_date_hint_text"
                android:padding="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_below="@id/reminderName"/>
            <DatePicker
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/reminder_date_picker"
                android:calendarViewShown="false"
                android:layout_below="@id/reminder_date_text"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/reminder_time_text"
                android:hint="@string/reminder_time_hint_text"
                android:padding="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_below="@id/reminder_date_picker"/>
            <TimePicker
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/reminder_time_picker"
                android:layout_below="@id/reminder_time_text"/>

        </RelativeLayout>

    </ScrollView>


    <Button
        android:id="@+id/add_shopping_reminder_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="0dp"
        android:text="@string/add_button"
        android:textSize="50sp"
        android:background="@drawable/shopping_button"
        android:textColor="@color/white" />

</RelativeLayout>
