<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:style="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_container">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">



            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/item_name"
                android:hint="@string/item_name_hint_txt"
                android:padding="10dp"
                android:includeFontPadding="false"
                android:singleLine="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:completionThreshold="2"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/item_expiry_date"
                android:hint="@string/item_expiry_date_hint_txt"
                android:padding="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp" />

            <DatePicker
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/datePicker"
                android:calendarViewShown="false"/>

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/item_checkbox_txt"
                android:id="@+id/item_notify_me"
                android:checked="false"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:id="@+id/item_quantity_label"
                    android:hint="@string/item_quantity"
                    android:layout_centerVertical="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginBottom="15dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/container_left"
                    android:layout_below="@id/item_quantity_label"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:layout_marginRight="2dp"
                        android:layout_centerVertical="true"
                        android:hint="@string/quantity"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:id="@+id/item_quantity"
                        android:layout_centerVertical="true"
                        android:text="1"/>

                </LinearLayout>

                <SeekBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/item_quantity_seek_bar"
                    android:layout_toRightOf="@id/container_left"
                    android:layout_below="@id/item_quantity_label"
                    android:layout_marginLeft="10dp"
                    android:max="15"/>

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bottom_container"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:background="?android:attr/dividerHorizontal"
            android:layout_marginTop="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_bar"
            android:orientation="horizontal"
            android:background="#F8F8F8"
            style="?android:attr/buttonBarButtonStyle">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/submit"
                style="?android:attr/borderlessButtonStyle"/>

            <View
                android:layout_width="2px"
                android:layout_height="match_parent"
                android:background="?android:attr/dividerVertical"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/cancel"
                android:text="@string/button_cancel"
                style="?android:attr/borderlessButtonStyle"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>


